[package]
name = "amx"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck_macros = "0.9.1"
aligned_box = "0.2.0"
env_logger = "0.7"
quickcheck = "0.9.2"
itertools = "0.10.0"
clap = "3.0.0-beta.2"
log = "0.4.11"
